a spelling mistake, and a missed buildserver configuration

--- a/build.decodes.conf
+++ b/build.decodes.conf
@@ -1,35 +1,30 @@
-# this template file should be compiled with mustache
-# to build a virtual host configuration
-# for a new backend instace of nginx.
+# This file configures nginx as a reverse proxy for the specific application
+# ports in question
+#
+
+upstream decodes {
+	server unix:/var/www/build.decod.es/app/build.decod.es.sock;
+}
 
 server {
-
 	listen 80;
 	listen [::]:80;
 
-	access_log /var/www/decod.es/logs/access.log;
-	error_log /var/www/decod.es/logs/error.log;
+	access_log /var/www/build.decod.es//logs/access.log;
+	error_log /var/www/build.decod.es//logs/error.log;
 
-	root /var/www/decod.es/html;
-	index index.html index.htm index.nginx-debian.html;
+	root /var/www/build.decod.es//app;
 
-	server_name decodes.workshopdesignstudio.org;
+	server_name build.decodes.workshopdesignstudio.org;
 
 	location / {
-		try_files $uri $uri/ /index.php$is_args$args;
+
+		proxy_pass http://decodes/;
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection 'upgrade';
+		proxy_set_header Host $host;
+		proxy_cache_bypass $http_upgrade;
+
 	}
-
-	location ~ /\.ht {
-		deny all;
-	}
-
-	location = /favicon.ico { log_not_found off; access_log off; }
-
-	location = /robots.txt { log_not_found off; access_log off; }
-
-	location ~* \.(css|gif|ico|jpeg|jpg|js|png)$ {
-		expires max;
-		log_not_found off;
-	}
-
 }
