a few to many slashes

--- a/build.decodes.conf
+++ b/build.decodes.conf
@@ -10,10 +10,10 @@ server {
 	listen 80;
 	listen [::]:80;
 
-	access_log /var/www/build.decod.es//logs/access.log;
-	error_log /var/www/build.decod.es//logs/error.log;
+	access_log /var/www/build.decod.es/logs/access.log;
+	error_log /var/www/build.decod.es/logs/error.log;
 
-	root /var/www/build.decod.es//app;
+	root /var/www/build.decod.es/app;
 
 	server_name build.decodes.workshopdesignstudio.org;
 
